--- a/index.html
+++ b/index.html
@@ -204,24 +204,23 @@
 		<h1>Role of Women</h1>
 		<h3>Was women even important?</h3>
 		<p>
-		  The Romantic Era was a time of complete social and political upheaval. While today the divide that exists between men and women is slowly disappearing, during the late 18th century and early 19th century the position of women was subordinate to that of men.
+		  The Romantic Era was a time of complete social and political upheaval. While today the divide that exists between men and women is slowly disappearing, during the late 18th century and early 19th century the position of women was subordinate to that of men. <br><br>
 
 
-		During the late 18th century and early 19th century men and women were socially and legally expected to behave to a seperate standard . While the rigorously contested shift from male supremacy to complete gender equality began in this Era it was by by no means achieved.
+		During the late 18th century and early 19th century men and women were socially and legally expected to behave to a seperate standard . While the rigorously contested shift from male supremacy to complete gender equality began in this Era it was by by no means achieved.<br><br>
 
-		The Romantic woman was pure and expected to live up to be the ideal women concept with the ‘Christian family model’ that regulated women of every class to the home and kitchen. This was seen as more acceptable then the alternative. Many authors of the time wrote under male pen names so that their work wouldn't be unfairly criticized because of their gender. Examples of this is the Brontë sisters of the UK that wrote their work under male names during the Romantic Era. A woman's loss of virginity before marriage was totally unacceptable and became an outcast from the society.
+		The Romantic woman was pure and expected to live up to be the ideal women concept with the ‘Christian family model’ that regulated women of every class to the home and kitchen. This was seen as more acceptable then the alternative. Many authors of the time wrote under male pen names so that their work wouldn't be unfairly criticized because of their gender. Examples of this is the Brontë sisters of the UK that wrote their work under male names during the Romantic Era. A woman's loss of virginity before marriage was totally unacceptable and became an outcast from the society.<br><br>
 
 
-		The law of the 19th century viewed married couple as one. However the individual rights and responsibilities of each member were greatly unequal.
-		As examples the women were expected to obey their husband who at this time had the legal right to demand his wife. All income of the wife went straight to her husband and any property that the woman brought to the marriage became property of the man. Before marriage the family of the wife would pay a sum of money to the husband for taking her, objectifying women. Women also didn't have any legal custody over their children.
+		The law of the 19th century viewed married couple as one. However the individual rights and responsibilities of each member were greatly unequal.<br><br>
+		As examples the women were expected to obey their husband who at this time had the legal right to demand his wife. All income of the wife went straight to her husband and any property that the woman brought to the marriage became property of the man. Before marriage the family of the wife would pay a sum of money to the husband for taking her, objectifying women. Women also didn't have any legal custody over their children.<br><br>
 
-		Throughout the Romantic Era the gender roles of the women in society had greatly changed. Previously only known for their abilities in the home, women throughout the industrial revolution began to work outside the home. Although their rights were transferred to their husbands upon marriage, the small changes in this era began the long struggle for equality which is still going today.
+		Throughout the Romantic Era the gender roles of the women in society had greatly changed. Previously only known for their abilities in the home, women throughout the industrial revolution began to work outside the home. Although their rights were transferred to their husbands upon marriage, the small changes in this era began the long struggle for equality which is still going today.<br><br>
 		<br>
 		<div class="sources-container">
 			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
-				<p>woah1</p>
-				<p>woah2</p>
+				<a>http://web.utk.edu/~gerard/romanticpolitics/feminism.html</a> <br>
 				<p>This article was written by <b>Lucas K.</b></p>
 			</ul>
 		</div>
@@ -229,7 +228,10 @@
 	</div>
 	<div class="content hideme showMeRight" id="article5">
 		<h1>Music</h1>
-		<h3>Romantic Era Music and Art in England</h3>
+		
+		
+	<h3>Romantic Era Music and Art in England</h3>
+	  	  <h3>Music</h3>
 		<p>The music during the Romantic era became a lot more emotional and dramatic; it also expanded into philosophical themes.<br> Music written during this time could have had a meaning of revolting against the political and social norm during the previous time (The Age of Enlightment)</p>
 			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
 		<p>The music during the romantic period had two major figures those being </p>
@@ -240,14 +242,11 @@
 		<h3>John Field born 1782-1837</h3>
 		
 		 <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
-		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.</p>
-		<br>
-		
+		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
 		<audio controls>
- 			<source src="clementi.mp3" type="audio/mpeg">
+ 			<source src="celemnti.mp3" type="audio/mpeg">
   			Your browser does not support the audio element.
 		</audio>
-		
 		<h3>Muzio Clementi born 1752 - 1832</h3>
 		<p>Muzio was one of the major figures during the romantic period in the world of music. . He was the composer of piano music, chamber music, as well as symphonies.</p>They also did concerts in notable cities as Paris and St. Petersburg.</p>
 		<p>Clementi’s most notable work is the fact that he changed the way you could play piano as he was noted to be the first to create the compositions capable of expressing the entire capabilities</p>
@@ -256,7 +255,6 @@
 		<div class="sources-container">
 			<a class="sources-button">View sources & author</a>
 			<ul class="sources">
-				<p></p>
 				<a> https://en.wikipedia.org/wiki/Romantic_music </a> <br>
 				<a>https://en.wikipedia.org/wiki/Nocturne</a>
 				<p>This article was written by <b>Melvin</b></p>
