--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="./script/navhider.js"></script>
 	<script type="text/javascript" src="./script/hideme.js"></script>
 	<script type="text/javascript" src="./script/sourcesdropdown.js"></script>
+	<script type="text/javascript" src="./script/changeSource.js"></script>
 	<!--End importing scripts -->
 </head>
 <body>
