--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 		<p>“Why should I care”, you may ask. Well, when looking at what the researchers achieved at the time, it is actually quite impressive how much of their discoveries and further developing of existing topics are still used and actively researched about.<br>
 		These topics include Biology, Mathematics, Physics, Astronomy, and Chemistry.<br>
 		Jean-Baptiste Lamarck was first to invent the Romantic take on Biology in 1801, which he affectionately referred to as “an independent scientific discipline […] consisting in a spreading awareness that […] living nature cannot be understood […] (by) the laws of physics”.<br>
-		At the time, the study of organic, living organisms was a new concept, which, as stated earlier, was rather revolutionary at the time. It sparked the interest in creating and working on loads of other scientific movements, like Goethe’s color science, and organic chemist
-		Most also believe that the structure of mathematics as we know them was defined during the Romantic era. Before, it was known as a logical, intuitive method to solve problems, but it was during the Romantic era that the boundaries were stretched, to the point where math became what it is known for now, theoretical and philosophical, rather than logic.<br><br>
+		At the time, the study of organic, living organisms was a new concept, which, as stated earlier, was rather revolutionary at the time. It sparked the interest in creating and working on loads of other scientific movements, like Goethe’s color science, and organic chemist.</p>
+		<p>Most also believe that the structure of mathematics as we know them was defined during the Romantic era. Before, it was known as a logical, intuitive method to solve problems, but it was during the Romantic era that the boundaries were stretched, to the point where math became what it is known for now, theoretical and philosophical, rather than logic.<br><br>
 
 		To wrap up, the Romantic Era was a huge part of creating the scientific grounds for the discoveries of today, with most of today’s large research topics originating from the era.<br><br>
 
