--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 		</div>
 	</div>
 	
+    <div id="article3bg">
 	<div class="content hideme showMeRight" id="article3">
 		<h1>Science</h1>
 		<h3>What characterizes the Romantic Era in science?</h3>
@@ -201,6 +202,7 @@
 			</ul>
 		</div>
 	</div>
+    </div>
 	<div class="content hideme showMeLeft" id="article4">
 		<h1>Role of Women</h1>
 		<h3>Was women even important?</h3>
