--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
 		<p>The music during the Romantic era became a lot more emotional and dramatic; it also expanded into philosophical themes.<br> Music written during this time could have had a meaning of revolting against the political and social norm during the previous time (The Age of Enlightment)</p>
 			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
 		<p>The music during the romantic period had two major figures those being </p>
-                 <audio controls>
+                <!-- Puts a music bar on the site which you can play music through. -->
+		<audio controls>
  			 <source src="field.mp3" type="audio/mpeg">
  			 Your browser does not support the audio element.
 		</audio>
@@ -245,7 +246,7 @@
 		
 		 <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
-		
+		 <!-- Puts a music bar on the site which you can play music through. -->
 		<audio controls>
  			<source src="clementi.mp3" type="audio/mpeg">
   			Your browser does not support the audio element.
