--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 			<p>While there were most famous composers during this era, this article will have a focus on the English composers.</p>
 		<p>The music during the romantic period had two major figures those being </p>
                 <!-- Puts a music bar on the site which you can play music through. -->
+		Music made by John Field
 		<audio controls>
  			 <source src="field.mp3" type="audio/mpeg">
  			 Your browser does not support the audio element.
@@ -247,7 +248,7 @@
 		 <p>John Field was a composer of the Romantic Era. He was born in Dublin, when his family moved to London. He decided to try promoting his musical talents. He managed to polish his talents by studying under Muzio Clementi for six years. <br>He did not just study under Clementi he also worked in his factory while being the apprentice of Clementi.<p>
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
 		 <!-- Puts a music bar on the site which you can play music through. -->
-		<p> music made by clementi </p>
+		 music made by clementi 
 		 <br> <audio controls>
  			<source src="clementi.mp3" type="audio/mpeg">
   			Your browser does not support the audio element.
