--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		John Fields most notable work is Nocturne, which is a composition which is inspired by the night (hence the name of Nocturne) the way nocturne is made it has the feeling of being tranquil and often very gloomy.
 		 <!-- Puts a music bar on the site which you can play music through. -->
 		 music made by clementi 
-		 <br> <audio controls>
+		 <audio controls>
  			<source src="clementi.mp3" type="audio/mpeg">
   			Your browser does not support the audio element.
 		</audio>
